Feat: Implementando CRUD (Create, Read)
Esse comit introduz funcionalidades para base de um CRUD

Leitura dos produtos do banco de dados;
Conversão de imagem do Modal para padrão URL, seguindo o banco de dados;
ViewModel para gerenciar multiplas funções do CRUD em um View;
Validação dos dados preenchidos, com mensagem de erro.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                     <div class="buttonAdd">
                         <button 
                             id="addToCart" 
-                            onclick="addToCartList(@product.Id, @product.ImgUrl, @product.Type, @product.Name, @product.Price)">Adicionar no carrinho
+                            onclick="addToCartList(@product.Id, @product.ImgUrl, @product.Type, @product.Name, @product.Price">Adicionar no carrinho
                         </button>
                     </div>
                 </div>
