--- a/Views/ShopCart/Index.cshtml
+++ b/Views/ShopCart/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<link rel="stylesheet" href="~/css/shopCartStyle.css">
+﻿@{
+    ViewData["title"] = "Carrinho";
+}
+
+<link rel="stylesheet" href="~/css/shopCartStyle.css">
 
 <body>
     <div class="banner">
