--- a/Views/InsertProducts/Index.cshtml
+++ b/Views/InsertProducts/Index.cshtml
@@ -1,4 +1,10 @@
-﻿<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+﻿@model InsertProductViewModel;
+
+@{
+    ViewData["title"] = "Cadastrar Produtos";
+}
+    
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="css/insertStyle.css">
 <link rel="stylesheet" href="css/indexStyle.css">
@@ -22,7 +28,27 @@
                     </tr>
                 </thead>
 
-                <tbody id="data"></tbody>
+                <tbody id="data">
+           
+    @if(Model != null)
+    {
+        foreach (var product in Model.ProductList)
+        {
+            <tr class="productDetails">
+                <td>@product.Id</td>
+                <td><img src=@product.ImgUrl></td>
+                <td>@product.Name</td>
+                <td>@product.Price</td>
+                <td>@product.Type</td>
+                
+                <td>
+                    <button class="editButton" oncl ick="" data-bs-toggle="modal" data-bs-target="#productForm">Editar</button>
+                    <button class="deleteButton" onclick="">Deletar</button>
+                </td>
+            </tr>
+        }
+    }
+                </tbody>
             </table>
         </div>
     </div>
@@ -38,11 +64,15 @@
                     
                     <div class ="modal-body">
 
-                        <form action="#" id="productRegister">
+                        <form method="post" asp-controller="InsertProducts" asp-action="Create" id="productRegister" enctype="multipart/form-data">
+                            
+                            @Html.AntiForgeryToken()
+
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                             <div class="modalImgHolder">
-                                <label for="imgInput" class="upload">
-                                    <input type="file" name="" id="imgInput">
+                                <label for="ImgUrl" class="upload">
+                                    <input type="file" asp-for="NewProduct.ImageFile" id="imgInput">
                                 </label>
                                 <img src="icons/imgHolderIcon.png" alt="" class="img">
                             </div>
@@ -50,15 +80,18 @@
                             <div class="inputField">
                                 <div>
                                     <label for="name">Nome:</label>
-                                    <input type="text" name="" id="name">
+                                    <input type="text" asp-for="NewProduct.Name" id="name">
+                                    <span asp-validation-for="NewProduct.Name" class="text-danger"></span>
                                 </div>
                                 <div>
                                     <label for="price">Preço:</label>
-                                    <input type="text" name="" id="price">
+                                    <input type="text" asp-for="NewProduct.Price" id="price">
+                                    <span asp-validation-for="NewProduct.Price" class="text-danger"></span>
                                 </div>
                                 <div>
                                     <label for="type">Tipo:</label>
-                                    <input type="text" list="types" name="" id="type">
+                                    <input type="text" asp-for="NewProduct.Type" list="types" id="type">
+                                    <span asp-validation-for="NewProduct.Type" class="text-danger"></span> 
                                         
                                         <datalist id="types">
                                             <option value ="Camiseta"></option>
@@ -69,7 +102,7 @@
                             </div>
                         </form>
                     </div>
-
+                    
                     <div class="modal-footer">
                             <button type="submit" form="productRegister" class="buttonRegister">Cadastrar</button>
                     </div>
@@ -124,6 +157,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-
-    <script src="js/insertProduct.js"></script>
+    @section Scripts {
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
+    }
 </body>
