Feat: Finalizando CRUD (Update, Delete);
Esse comit finaliza as operações de CRUD e encerra o objetivo geral do projeto.

Leitura dos produtos cadastrados e opção para alteração dos mesmos;
Lógica de editar com apoio de JS para o redirecionamento correto das funções;
Delete dos objetos cadastrados no banco;
Lógica de reset de formulário utilizando JS;
Formatação visual dos valores.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 
                     <div class="productCardInfos">
                         <p id="productDescr"> @product.Type @product.Name</p>
-                        <p id="productPrice">@product.Price</p>
+                        <p id="productPrice">@product.Price.ToString("C")</p>
                     </div>
 
                     <div class="buttonAdd">
