--- a/Views/InsertProducts/Index.cshtml
+++ b/Views/InsertProducts/Index.cshtml
@@ -38,12 +38,19 @@
                 <td>@product.Id</td>
                 <td><img src=@product.ImgUrl></td>
                 <td>@product.Name</td>
-                <td>@product.Price</td>
+                <td>@product.Price.ToString("C")</td>
                 <td>@product.Type</td>
                 
                 <td>
-                    <button class="editButton" oncl ick="" data-bs-toggle="modal" data-bs-target="#productForm">Editar</button>
-                    <button class="deleteButton" onclick="">Deletar</button>
+
+                    <button type="button" class="editButton" data-bs-toggle="modal" data-bs-target="#productForm" data-product-id="@product.Id">Editar</button>
+                    
+                    <form asp-controller="InsertProducts" asp-action="Delete" method="post" style="display:inline;">
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" name="Id" value="@product.Id"/>    
+                        <button type="submit" class="deleteButton" onclick="return confirm('Deseja deletar esse produto?');">Deletar</button>
+                    </form>
+
                 </td>
             </tr>
         }
@@ -53,7 +60,7 @@
         </div>
     </div>
 
-    <!--Usando modal para fazer a sobreposição da tela de adicionar item-->
+    <!--Usando modal para fazer a sobreposição da tela de adicionar/editar item-->
         <div class="modal fade" id="productForm">
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content">
@@ -69,7 +76,7 @@
                             @Html.AntiForgeryToken()
 
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+                            
                             <div class="modalImgHolder">
                                 <label for="ImgUrl" class="upload">
                                     <input type="file" asp-for="NewProduct.ImageFile" id="imgInput">
@@ -78,6 +85,7 @@
                             </div>
 
                             <div class="inputField">
+                                    <input type="hidden" asp-for="NewProduct.Id" id="productId"/>
                                 <div>
                                     <label for="name">Nome:</label>
                                     <input type="text" asp-for="NewProduct.Name" id="name">
@@ -109,57 +117,20 @@
                 </div>
             </div>
         </div>
-        
-        <!--Ler as informações de modal-->
-        <div class="modal fade" id="readData">
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-                <div class="modal-content">
-
-                    <div class="modal-header">
-                        <h4 class="modal-title">Produto</h4>
-                        <button type="button" class="buttonClose" data-bs-dismiss="modal" aria-label="Close"><img src="icons/closeIcon.png"></button>     
-                    </div>
-                    
-                    <div class ="modal-body">
-
-                        <form action="#" id="productRegister">
-                            <div class="modalImgHolder">
-                                <img src="icons/imgHolderIcon.png">
-                            </div>
-
-                            <div class="inputField">
-                                <div>
-                                    <label for="name">Nome:</label>
-                                    <input type="text" name="" id="name">
-                                </div>  
-                                <div>
-                                    <label for="price">Preço:</label>
-                                    <input type="text" id="price">
-                                </div>
-                                <div>
-                                    <label for="type">Tipo:</label>
-                                    <input type="text" list="types" name="" id="type">
-
-                                <datalist id="types">
-                                    <option value="Camiseta"></option>
-                                    <option value="Caneca"></option>
-                                    <option value="Calçado"></option>
-                                </datalist>
-
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
     @section Scripts {
-        @{
-            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+
+        <script type="text/javascript">
+            $.validator.methods.number = function (value, element){
+            return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+            }
+        </script>
+        <script src="~/js/InsertProduct.js" defer></script>
         }
     }
 </body>
